# extended-kalman-filter

./: .gitignore  LICENSE  README.md  _config.yml  index.html  notation.md  params.json
EKF_EulerAngle/: IMUOffset.mat  IMUOffset_New.mat  acclTest.m  compareEKF_completeLeg.m  compareEKF_completeLeg_plotSave.m  comparePlots.m  computeOptimalIMURotation.m  footComputations.m  modelSensorParams_completeLeg.m  modelSensorParams_completeLeg_comprehensive.m  modelSensorParams_foot.m  modelSensorParams_foot_comprehensive.m  optimalIMURotation.m  plotAndSaveFigs.m  plotAndSaveHumanoidsFigs.m  readFTOffsets.m  realMeasurement.m  realMeasurement_completeLeg.m  realMeasurement_completeLegWithSkin.m  realMeasurement_comprehensive.m  realMeasurement_foot.m  setupCovariancesForExperiments.m  setupCovariancesForExperiments_comprehensive.m  setupCovariancesForExperiments_foot.m  testEKF_.m  testEKF_completeLeg.m  testEKF_completeLegWithSkin.m  testEKF_comprehensive.m  testEKF_foot.m
EKF_EulerAngle_IROS2015/: plotAndSaveIrosFigs.m  realMeasurement_completeLegWithSkin.m  testForwardDyn.m
EKF_EulerAngle_noskin/: modelSensorParams_completeLeg.m  plotAndSaveIrosFigs.m  realMeasurement_completeLegWithSkin.m  testEKF_completeLegWithSkin.m  testEKF_foot.m
EKF_EulerAngles/: matlab.mat  test_without_offset.fig  untitled.m
EKF_Quaternion/: computeNoiseCovarianceMatrix.m  ekfQuaternion.m  ekfqEstimate.m  quaternionPropagation.m
EKF_Quaternion_DynWalking2015/orocos_bfl/: CMakeLists.txt  orocos_bfl.kdev4
EKF_Quaternion_DynWalking2015/orocos_bfl/.kdev4/: orocos_bfl.kdev4
EKF_Quaternion_DynWalking2015/orocos_bfl/app/: dataCollector.xml  quaternionEKFModule.ini  scope.xml  scopeXSens.xml
EKF_Quaternion_DynWalking2015/orocos_bfl/cmake/: FindXSens.cmake
EKF_Quaternion_DynWalking2015/orocos_bfl/include/: dataDumperParser.h  deviceclass.h  nonLinearAnalyticConditionalGaussian.h  nonLinearMeasurementGaussianPdf.h  quaternionEKF.h  quaternionEKFModule.h  quaternionEKFThread.h
EKF_Quaternion_DynWalking2015/orocos_bfl/src/: dataDumperParser.cpp  deviceclass.cpp  main.cpp  nonLinearAnalyticConditionalGaussian.cpp  nonLinearMeasurementGaussianPdf.cpp  quaternionEKFModule.cpp  quaternionEKFThread.cpp
FootSkinTaxelPosition/: ftleft_foot_mesh.mat  ftright_foot_mesh.mat
ICRA2015/: estimationMain.aux  estimationMain.tex  estimationRefs.bib  ieeeconf.cls
_drafts/: propagation-of-the-quaternion.md
_posts/: 2014-01-06-mathjax-post.md  2014-08-09-quaternion-based-multiplicative-ekf.md
blog/: README.md  index.html
comparison/: plotFilterResultTimeSeries.m  plotFilterResultTimeSeries.m~  plotcompare  plotcompare.m
dEKF_EulerAngle/: realMeasurement_completeLegWithSkin.m  testEKF_completeLegWithSkin.m
dualEKF_EulerAngle/: realMeasurement_completeLegWithSkin.m  testEKF_completeLegWithSkin.m
jEKF_EulerAngle/: modelSensorParams_completeLeg.m  realMeasurement_completeLegWithSkin.m  realMeasurement_completeLegWithSkin.m~  realMeasurement_withSkin.m  testEKF_completeLegWithSkin.m  (+1 more)
localParamEKF/: main.m  (+24 more)
(+433 files in other folders)
